--- a/Excalibur/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Excalibur/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ SphereComponent=
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Player/Animation/Blueprint
+ContentBrowserTab1.SelectedPaths=/Game/Player/Character
 ContentBrowserTab2.SourcesExpanded=True
 ContentBrowserTab2.Locked=False
 ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
@@ -217,7 +217,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/Player
+ContentBrowserTab2.SelectedPaths=/Game/Player/DataTable/Data
 ContentBrowserTab2.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab2.CollectionsExpanded=True
@@ -276,7 +276,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-Excalibur.TimeStamp=2022.01.25-15.29.41
+Excalibur.TimeStamp=2022.01.27-13.21.29
 Excalibur.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.07.10-11.17.04
 PakFile.LastCompileMethod=Unknown
@@ -2093,11 +2093,12 @@ Test_C.Actor=True
 Test_C.Collision=True
 Test_C.Input=True
 Test_C.Gameplay Effects=True
+HealthComponent.Health Data=True
+HeroHealthData.Gameplay Effects=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Player/Character/HeroCharacter_BP.HeroCharacter_BP
-OpenAssetsAtExit=/Game/Player/Animation/Blueprint/HeroAnimation_BP.HeroAnimation_BP
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2113,8 +2114,8 @@ GameplayEffectCreationMenu=True
 InstalledPlugins=XRVisualization
 
 [RootWindow]
-ScreenPosition=X=326.000 Y=169.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=315.000 Y=157.000
+WindowSize=X=1280.000 Y=716.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2134,26 +2135,26 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/Animation/Blueprint/HeroAnimation_BP
+MRUItem0=/Game/Player/DataTable/Data/HeroHealthData
 MRUItem1=/Game/Player/Character/HeroCharacter_BP
-MRUItem2=/Game/Player/Test
-MRUItem3=/Game/Player/GameplayAbility/HGA_Evade
-MRUItem4=/Game/Player/GameplayEffect/HGE_Evade
-MRUItem5=/Game/Player/Animation/Montage/AM_Evade
-MRUItem6=/Game/BossyEnemy/Animations/InPlace/Attacks/Boss_Attack_Running_Simple_InP
-MRUItem7=/Game/BossyEnemy/Animations/InPlace/Attacks/Boss_Attack_HandAndSwordSwing_InP
-MRUItem8=/Game/BossyEnemy/Animations/InPlace/Attacks/Boss_Attack_ChargedCombo_InP
-MRUItem9=/Game/Player/GameplayEffect/Regeneration/HGE_HealthRegeneration
-MRUItem10=/Game/Player/Damage/DamageData/HeroDamageAsset
-MRUItem11=/Game/Player/DataTable/PlayerAttributes/PlayerAttributes
-MRUItem12=/Game/Player/DataTable/ItemValue/HeroHealthPotionBase
-MRUItem13=/Game/Player/GameplayEffect/Potion/HGE_HealthPotion
-MRUItem14=/Game/Player/Item/HealthPotion
-MRUItem15=/Game/Player/GameplayEffect/Damage/HGE_Damage
-MRUItem16=/Game/Player/Item/MyHeroItemBase
-MRUItem17=/Game/Player/GameplayEffect/Damage/HGE_DamagePeriod
-MRUItem18=/Game/Player/Blueprint/DamageObj/Damage_BP
-MRUItem19=/Game/Player/Blueprint/DamageObj/Damage_BP_2
+MRUItem2=/Game/Player/DataTable/PlayerAttributes/PlayerAttributes
+MRUItem3=/Game/Player/Damage/DamageData/HeroDamageAsset
+MRUItem4=/Game/Player/GameplayEffect/Regeneration/HGE_HealthRegeneration_Prevention
+MRUItem5=/Game/Player/GameplayEffect/Regeneration/HGE_HealthRegeneration
+MRUItem6=/Game/Player/HeroAbility/HeroAbility
+MRUItem7=/Game/Player/Animation/Blueprint/HeroAnimation_BP
+MRUItem8=/Game/Player/Test
+MRUItem9=/Game/Player/GameplayAbility/HGA_Evade
+MRUItem10=/Game/Player/GameplayEffect/HGE_Evade
+MRUItem11=/Game/Player/Animation/Montage/AM_Evade
+MRUItem12=/Game/BossyEnemy/Animations/InPlace/Attacks/Boss_Attack_Running_Simple_InP
+MRUItem13=/Game/BossyEnemy/Animations/InPlace/Attacks/Boss_Attack_HandAndSwordSwing_InP
+MRUItem14=/Game/BossyEnemy/Animations/InPlace/Attacks/Boss_Attack_ChargedCombo_InP
+MRUItem15=/Game/Player/DataTable/ItemValue/HeroHealthPotionBase
+MRUItem16=/Game/Player/GameplayEffect/Potion/HGE_HealthPotion
+MRUItem17=/Game/Player/Item/HealthPotion
+MRUItem18=/Game/Player/GameplayEffect/Damage/HGE_Damage
+MRUItem19=/Game/Player/Item/MyHeroItemBase
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2264,9 +2265,12 @@ RecentlyPlaced=/Game/Player/Character/HeroCharacter_BP.HeroCharacter_BP;
 /Game/BossyEnemy/Animations/InPlace/Attacks/Boss_Attack_ChargedCombo_InP.Boss_Attack_ChargedCombo_InP=0
 /Game/BossyEnemy/Animations/InPlace/Attacks/Boss_Attack_HandAndSwordSwing_InP.Boss_Attack_HandAndSwordSwing_InP=0
 /Game/BossyEnemy/Animations/InPlace/Attacks/Boss_Attack_Running_Simple_InP.Boss_Attack_Running_Simple_InP=0
+/Game/Player/GameplayEffect/Regeneration/HGE_HealthRegeneration_Prevention.HGE_HealthRegeneration_Prevention=0
+/Game/Player/GameplayEffect/Regeneration/HGE_HealthRegeneration.HGE_HealthRegeneration=0
+/Game/Player/DataTable/Data/HeroHealthData.HeroHealthData=1
 
 [Directories2]
-UNR=../../../../../VisualStudio/UE4C_PlusPlus/Excalibur/Content/ThirdPersonCPP/Maps
+UNR=../../../../../Unreal/ActionRPG_ue4/Excalibur/Content/ThirdPersonCPP/Maps
 BRUSH=../../../../../Unreal/Excalibur/Content/
 FBX=../../../../../Unreal/Excalibur/Content/
 FBXAnim=../../../../../Unreal/Excalibur/Content/
@@ -2325,16 +2329,16 @@ TimelineEnabledSnaps=MontageSection
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
-Object="\"Object.SkeletalMeshes\" "
+DataAsset=
+Object=
 HeroPlayerState_BP_C="\"Object.Player.Player|Abilities\" "
 HeroPlayerState="\"Object.Player.Player|Abilities\" "
 PlayerState="\"Object.Player.Player|Abilities\" "
 Info=
 GE_HeroAttributes_C="\"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[1]\" \"Object.GameplayEffect.Modifiers.Modifiers[1].ModifierMagnitude\" "
-GameplayEffect="\"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Executions\" "
+GameplayEffect="\"Object.Expiration.RoutineExpirationEffectClasses\" \"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.Tags.RemoveGameplayEffectsWithTags\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers.Modifiers[0].TargetTags\" \"Object.GameplayEffect.Executions\" "
 HGE_PlayerInit_C="\"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[1]\" \"Object.GameplayEffect.Modifiers.Modifiers[1].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[2]\" \"Object.GameplayEffect.Modifiers.Modifiers[2].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[3]\" \"Object.GameplayEffect.Modifiers.Modifiers[3].ModifierMagnitude\" "
-HeroGameplayEffect="\"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Executions\" "
+HeroGameplayEffect="\"Object.Expiration.RoutineExpirationEffectClasses\" \"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.Tags.RemoveGameplayEffectsWithTags\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers.Modifiers[0].TargetTags\" \"Object.GameplayEffect.Executions\" "
 HeroCharacter_BP_C="\"Object.Player.Player|Data\" \"Object.Player.Player|Abilities\" "
 HeroPlayerCharacter="\"Object.Player.Player|Data\" \"Object.Player.Player|Abilities\" "
 ExcaliburCharacter="\"Object.Player.Player|Data\" \"Object.Player.Player|Abilities\" "
@@ -2358,7 +2362,7 @@ HeroPlayerController_BP_C=
 HeroPlayerController=
 PlayerController=
 Controller=
-HealthComponent="\"Object.Hero.Hero|UI\" "
+HealthComponent=
 HOTRELOADED_HealthComponent_3="\"Object.Hero.Hero|UI\" "
 Health_UI_C=
 CharacterHealthWidget=
@@ -2375,8 +2379,8 @@ SphereComponent=
 HealthPotion_C="\"Object.HeroItemBase.ItemCollision.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 HeroItemBase="\"Object.HeroItemBase.ItemCollision.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 HGE_HealthPotion_C="\"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.SetByCallerMagnitude\" \"Object.GameplayEffect.Executions\" "
-HGE_HealthRegeneration_C="\"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Executions\" "
-HGE_HealthRegeneration_Prevention_C="\"Object.Expiration.RoutineExpirationEffectClasses\" \"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.Tags.RemoveGameplayEffectsWithTags\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Executions\" "
+HGE_HealthRegeneration_C="\"Object.Expiration.RoutineExpirationEffectClasses\" \"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.Tags.RemoveGameplayEffectsWithTags\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers.Modifiers[0].TargetTags\" \"Object.GameplayEffect.Executions\" "
+HGE_HealthRegeneration_Prevention_C="\"Object.Expiration.PrematureExpirationEffectClasses\" \"Object.Expiration.RoutineExpirationEffectClasses\" \"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.Tags.RemoveGameplayEffectsWithTags\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Executions\" "
 Test_C="\"Object.HeroItemBase.ItemCollision.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
