--- a/Excalibur/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Excalibur/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ SphereComponent=
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Player/GameplayEffect/Cooldown
+ContentBrowserTab1.SelectedPaths=/Game/Player/GameplayEffect/Cost
 ContentBrowserTab2.SourcesExpanded=True
 ContentBrowserTab2.Locked=False
 ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
@@ -276,7 +276,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-Excalibur.TimeStamp=2022.02.02-11.36.38
+Excalibur.TimeStamp=2022.02.08-13.02.40
 Excalibur.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.07.10-11.17.04
 PakFile.LastCompileMethod=Unknown
@@ -2224,26 +2224,26 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/Character/HeroPlayerState_BP
-MRUItem1=/Game/Player/DataTable/PlayerAttributes/Cooldown
-MRUItem2=/Game/Player/GameplayEffect/Cooldown/HGE_CooldownTest
-MRUItem3=/Game/Player/Character/HeroCharacter_BP
-MRUItem4=/Game/Player/DataTable/Data/HeroHealthData
-MRUItem5=/Game/Player/DataTable/Data/HeroStamianData
-MRUItem6=/Game/Player/DataTable/Data/HeroManaData
-MRUItem7=/Game/Player/GameplayEffect/Regeneration/HGE_HealthRegeneration_Prevention
-MRUItem8=/Game/Player/GameplayEffect/Regeneration/HGE_HealthRegeneration
-MRUItem9=/Game/Player/DataTable/PlayerAttributes/PlayerAttributes
-MRUItem10=/Game/Player/GameplayEffect/Cost/HGE_Roll_StaminaCost
-MRUItem11=/Game/Player/GameplayAbility/HGA_Evade
-MRUItem12=/Game/Player/GameplayEffect/HGE_Evade
-MRUItem13=/Game/Player/GameplayEffect/Regeneration/HGE_StaminaRegeneration_Prevention
-MRUItem14=/Game/Player/GameplayEffect/Regeneration/HGE_StaminaRegeneration
-MRUItem15=/Game/Player/GameplayEffect/Regeneration/HGE_ManaRegeneration
-MRUItem16=/Game/Player/GameplayEffect/Regeneration/HGE_ManaRegeneration_Prevention
-MRUItem17=/Game/Player/GameplayAbility/HGA_Crouch
-MRUItem18=/Game/Player/DataTable/Values/AbilityCost
-MRUItem19=/Game/Player/GameplayEffect/Cost/HGE_Sprint_StaminaCost
+MRUItem0=/Game/Player/GameplayAbility/HGA_Crouch
+MRUItem1=/Game/Player/HeroAbility/HeroAbility
+MRUItem2=/Game/Player/GameplayEffect/Cost/HGE_Roll_StaminaCost
+MRUItem3=/Game/Player/Character/HeroPlayerState_BP
+MRUItem4=/Game/Player/DataTable/PlayerAttributes/Cooldown
+MRUItem5=/Game/Player/GameplayEffect/Cooldown/HGE_CooldownTest
+MRUItem6=/Game/Player/Character/HeroCharacter_BP
+MRUItem7=/Game/Player/DataTable/Data/HeroHealthData
+MRUItem8=/Game/Player/DataTable/Data/HeroStamianData
+MRUItem9=/Game/Player/DataTable/Data/HeroManaData
+MRUItem10=/Game/Player/GameplayEffect/Regeneration/HGE_HealthRegeneration_Prevention
+MRUItem11=/Game/Player/GameplayEffect/Regeneration/HGE_HealthRegeneration
+MRUItem12=/Game/Player/DataTable/PlayerAttributes/PlayerAttributes
+MRUItem13=/Game/Player/GameplayAbility/HGA_Evade
+MRUItem14=/Game/Player/GameplayEffect/HGE_Evade
+MRUItem15=/Game/Player/GameplayEffect/Regeneration/HGE_StaminaRegeneration_Prevention
+MRUItem16=/Game/Player/GameplayEffect/Regeneration/HGE_StaminaRegeneration
+MRUItem17=/Game/Player/GameplayEffect/Regeneration/HGE_ManaRegeneration
+MRUItem18=/Game/Player/GameplayEffect/Regeneration/HGE_ManaRegeneration_Prevention
+MRUItem19=/Game/Player/DataTable/Values/AbilityCost
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2427,16 +2427,16 @@ TimelineEnabledSnaps=MontageSection
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset=
+DataAsset="\"Object.HeroAbilityDataAsset.Abilities\" \"Object.HeroAbilityDataAsset.Abilities.Abilities[0]\" \"Object.HeroAbilityDataAsset.Abilities.Abilities[1]\" \"Object.HeroAbilityDataAsset.Abilities.Abilities[2]\" \"Object.HeroAbilityDataAsset.Abilities.Abilities[3]\" \"Object.HeroAbilityDataAsset.Abilities.Abilities[4]\" \"Object.HeroAbilityDataAsset.Abilities.Abilities[5]\" \"Object.HeroAbilityDataAsset.Abilities.Abilities[6]\" \"Object.HeroAbilityDataAsset.Abilities.Abilities[7]\" "
 Object=
 HeroPlayerState_BP_C="\"Object.Player.Player|Abilities\" "
 HeroPlayerState="\"Object.Player.Player|Abilities\" "
 PlayerState="\"Object.Player.Player|Abilities\" "
 Info=
 GE_HeroAttributes_C="\"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[1]\" \"Object.GameplayEffect.Modifiers.Modifiers[1].ModifierMagnitude\" "
-GameplayEffect="\"Object.Expiration.RoutineExpirationEffectClasses\" \"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.Tags.RemoveGameplayEffectsWithTags\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Executions\" \"Object.GameplayEffect.ConditionalGameplayEffects\" "
+GameplayEffect="\"Object.Expiration.RoutineExpirationEffectClasses\" \"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.Tags.RemoveGameplayEffectsWithTags\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude.AttributeCurve\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.CustomMagnitude.FinalLookupCurve\" \"Object.GameplayEffect.Executions\" \"Object.GameplayEffect.ConditionalGameplayEffects\" \"Object.GameplayEffect.ConditionalGameplayEffects.ConditionalGameplayEffects[0]\" "
 HGE_PlayerInit_C="\"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[1]\" \"Object.GameplayEffect.Modifiers.Modifiers[1].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[2]\" \"Object.GameplayEffect.Modifiers.Modifiers[2].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[3]\" \"Object.GameplayEffect.Modifiers.Modifiers[3].ModifierMagnitude\" "
-HeroGameplayEffect="\"Object.Expiration.RoutineExpirationEffectClasses\" \"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.Tags.RemoveGameplayEffectsWithTags\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Executions\" \"Object.GameplayEffect.ConditionalGameplayEffects\" "
+HeroGameplayEffect="\"Object.Expiration.RoutineExpirationEffectClasses\" \"Object.Tags.InheritableOwnedTagsContainer\" \"Object.Tags.RemovalTagRequirements\" \"Object.Tags.RemoveGameplayEffectsWithTags\" \"Object.GameplayEffect.DurationMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.DurationMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers\" \"Object.GameplayEffect.Modifiers.Modifiers[0]\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude.BackingAttribute\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.AttributeBasedMagnitude.AttributeCurve\" \"Object.GameplayEffect.Modifiers.Modifiers[0].ModifierMagnitude.CustomMagnitude.FinalLookupCurve\" \"Object.GameplayEffect.Executions\" \"Object.GameplayEffect.ConditionalGameplayEffects\" \"Object.GameplayEffect.ConditionalGameplayEffects.ConditionalGameplayEffects[0]\" "
 HeroCharacter_BP_C="\"Object.Player.Player|Data\" \"Object.Player.Player|Abilities\" "
 HeroPlayerCharacter="\"Object.Player.Player|Data\" \"Object.Player.Player|Abilities\" "
 ExcaliburCharacter="\"Object.Player.Player|Data\" \"Object.Player.Player|Abilities\" "
