--- a/Excalibur/Saved/Config/Windows/Engine.ini
+++ b/Excalibur/Saved/Config/Windows/Engine.ini
@@ -21,6 +21,11 @@ Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
 Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../Engine/Plugins/Experimental/PythonScriptPlugin/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXR/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXRHandTracking/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXREyeTracker/Content
+Paths=../../../Engine/Plugins/VirtualProduction/Takes/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
