Custum Ability Task

--- a/Excalibur/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Excalibur/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -217,7 +217,7 @@ PythonScriptPluginSettings=InputSettings.Bindings.ActionMappings,InputSettings.B
 TakeRecorderProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Ability1,InputSettings.Bindings.ActionMappings.Ability2,InputSettings.Bindings.ActionMappings.Ability3,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Evade,InputSettings.Bindings.ActionMappings.BackSideStep,InputSettings.Bindings.ActionMappings.LeftSideStep,InputSettings.Bindings.ActionMappings.RightSideStep,InputSettings.Bindings.ActionMappings.FeatherFall,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Equip,InputSettings.Bindings.ActionMappings.Attack,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Player/GameplayAbility
+ContentBrowserTab1.SelectedPaths=/Game/Player/Animation/Montage
 ContentBrowserTab2.SourcesExpanded=True
 ContentBrowserTab2.Locked=False
 ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
@@ -290,7 +290,7 @@ ContentBrowserTab1.PluginFilters=
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-Excalibur.TimeStamp=2022.04.11-16.06.35
+Excalibur.TimeStamp=2022.04.13-14.22.44
 Excalibur.LastCompileMethod=External
 PakFile.TimeStamp=2022.03.01-21.48.00
 PakFile.LastCompileMethod=External
@@ -1199,7 +1199,7 @@ TakeRecorder.LastCompileMethod=Unknown
 WorldSettings.PrecomputedVisibility=True
 WorldSettings.GameMode=True
 WorldSettings.Lightmass=True
-WorldSettings.World=True
+WorldSettings.World=False
 WorldSettings.Physics=True
 WorldSettings.Broadphase=True
 WorldSettings.VR=True
@@ -2365,9 +2365,6 @@ TakeRecorderProjectSettings.World Recorder=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Player/Character/HeroCharacter_BP.HeroCharacter_BP
-OpenAssetsAtExit=/Game/Player/GameplayAbility/HGA_WeaponAttack.HGA_WeaponAttack
-OpenAssetsAtExit=/Game/Player/Animation/Montage/AM_Attack.AM_Attack
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2404,23 +2401,23 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/Animation/Montage/AM_Attack
-MRUItem1=/Game/Player/GameplayAbility/HGA_WeaponAttack
-MRUItem2=/Game/Player/HeroAbility/HeroAbility
-MRUItem3=/Game/Player/Character/HeroCharacter_BP
-MRUItem4=/Game/Player/Character/HeroPlayerController_BP
-MRUItem5=/Game/DynamicSwordAnimset/Character/SK_Mannequin_Skeleton
-MRUItem6=/Game/Player/GameplayAbility/HGA_Equip
-MRUItem7=/Game/Player/Animation/Montage/AM_Equip
-MRUItem8=/Game/Player/GameplayAbility/HGA_SideStep
-MRUItem9=/Game/Player/GameplayAbility/HGA_Sprint
-MRUItem10=/Game/Player/Animation/Blueprint/HeroAnimation_BP
-MRUItem11=/Game/Player/Animation/Blueprint/HeroAnim/HeroEquip
-MRUItem12=/Game/Player/Animation/Blueprint/HeroAnim/HeroStealth
-MRUItem13=/Game/Player/UI/HERO_UI_Main
-MRUItem14=/Game/Player/UI/Ability/UI_AbilityBar
-MRUItem15=/Game/Player/UI/Ability/UI_AbilityTest
-MRUItem16=/Game/Player/GameplayAbility/HGA_Crouch
+MRUItem0=/Game/Player/Animation/Montage/AM_Equip
+MRUItem1=/Game/Player/GameplayAbility/HGA_Equip
+MRUItem2=/Game/Player/Animation/Montage/AM_Attack
+MRUItem3=/Game/Player/GameplayAbility/HGA_Crouch
+MRUItem4=/Game/Player/GameplayAbility/HGA_WeaponAttack
+MRUItem5=/Game/Player/HeroAbility/HeroAbility
+MRUItem6=/Game/Player/Character/HeroCharacter_BP
+MRUItem7=/Game/Player/Character/HeroPlayerController_BP
+MRUItem8=/Game/DynamicSwordAnimset/Character/SK_Mannequin_Skeleton
+MRUItem9=/Game/Player/GameplayAbility/HGA_SideStep
+MRUItem10=/Game/Player/GameplayAbility/HGA_Sprint
+MRUItem11=/Game/Player/Animation/Blueprint/HeroAnimation_BP
+MRUItem12=/Game/Player/Animation/Blueprint/HeroAnim/HeroEquip
+MRUItem13=/Game/Player/Animation/Blueprint/HeroAnim/HeroStealth
+MRUItem14=/Game/Player/UI/HERO_UI_Main
+MRUItem15=/Game/Player/UI/Ability/UI_AbilityBar
+MRUItem16=/Game/Player/UI/Ability/UI_AbilityTest
 MRUItem17=/Game/Player/GameplayEffect/Cost/HGE_Roll_StaminaCost
 MRUItem18=/Game/Player/Character/HeroPlayerState_BP
 MRUItem19=/Game/Player/DataTable/PlayerAttributes/Cooldown
@@ -2553,9 +2550,10 @@ RecentlyPlaced=/Game/Player/Character/HeroCharacter_BP.HeroCharacter_BP;
 /Game/DynamicSwordAnimset/Character/SK_Mannequin_Skeleton.SK_Mannequin_Skeleton=0
 /Game/Player/GameplayAbility/HGA_Equip.HGA_Equip=0
 /Game/DynamicSwordAnimset/Animations/InPlace/Attack_03.Attack_03=0
+/Game/Player/Animation/Montage/AM_Attack.AM_Attack=0
 
 [Directories2]
-UNR=../../../../../Unreal/ActionRPG_ue4/Excalibur/Content/ThirdPersonCPP/Maps
+UNR=../../../../../Unreal/RPGPrototype_ue4/Excalibur/Content/ThirdPersonCPP/Maps
 BRUSH=../../../../../Unreal/Excalibur/Content/
 FBX=../../../../../Unreal/Excalibur/Content/
 FBXAnim=../../../../../Unreal/Excalibur/Content/
@@ -2729,7 +2727,7 @@ ChangeVariableType_Warning=False
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [WidgetTemplatesExpanded]
 Common=False
