--- a/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-RPGPrototype.TimeStamp=2023.01.28-18.48.22
+RPGPrototype.TimeStamp=2023.02.03-19.10.20
 RPGPrototype.LastCompileMethod=External
 PakFile.TimeStamp=2022.03.01-21.48.00
 PakFile.LastCompileMethod=Unknown
@@ -1170,4 +1170,7 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[AssetEditorToolkitTabLocation]
+/Game/Player/ThirdPersonCharacter.ThirdPersonCharacter=1
 
