--- a/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -166,9 +166,12 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/Level
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [ModuleFileTracking]
 RPGPrototype.TimeStamp=2023.02.03-19.10.20
@@ -1061,6 +1064,10 @@ Voice.TimeStamp=2022.03.01-21.48.03
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2022.03.01-21.47.59
 MovieSceneCapture.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2022.03.01-21.48.00
+NewLevelDialog.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.03.01-21.47.58
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1090,6 +1097,19 @@ ThirdPersonCharacter_C.Actor=True
 ThirdPersonCharacter_C.Input=True
 K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1116,7 +1136,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/ThirdPersonCPP/Maps
+UNR=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/Level
 BRUSH=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
 FBX=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
 FBXAnim=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
@@ -1126,11 +1146,12 @@ GenericOpen=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
 GenericSave=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
 MeshImportExport=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
 WorldRoot=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
-Level=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
+Level=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/Level
 Project=E:/UnrealEngine4/UE_4.27/
 
 [MRU]
-MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/Level/Level1
+MRUItem1=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Player/ThirdPersonCharacter
