--- a/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -171,10 +171,10 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-RPGPrototype.TimeStamp=2023.02.03-19.10.20
+RPGPrototype.TimeStamp=2023.02.18-19.34.14
 RPGPrototype.LastCompileMethod=External
 PakFile.TimeStamp=2022.03.01-21.48.00
 PakFile.LastCompileMethod=Unknown
@@ -1068,6 +1068,8 @@ NewLevelDialog.TimeStamp=2022.03.01-21.48.00
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.03.01-21.47.58
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+MultiplayerSession.TimeStamp=2023.02.19-17.44.33
+MultiplayerSession.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1110,6 +1112,7 @@ StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
 StaticMeshActor.Actor=True
+NewPluginDescriptorData.Descriptor Data=True
 
 [MessageLog]
 LastLogListing=LoadErrors
