--- a/RPGPrototype/Saved/Config/Windows/Engine.ini
+++ b/RPGPrototype/Saved/Config/Windows/Engine.ini
@@ -26,6 +26,7 @@ Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
 Paths=../../../Engine/Plugins/VirtualProduction/Takes/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Plugins/MultiplayerSession/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
